--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.16MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-345.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇯🇵 日本-17.97MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.22MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇭🇰 香港-389.5KB/s(Youtube:不良林), server: hk003.369boy.com, port: 32502, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: hk003.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 未知国家-1.90MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-345.0KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.33MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: bwg2.gushidawang.cc, port: 57539, type: vmess, uuid: fcf7202c-bd1a-44e9-a25e-bf152f6e5c11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-304.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.95MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 未知国家-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
