--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-389.5KB/s(Youtube:不良林), server: hk003.369boy.com, port: 32502, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: hk003.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-345.0KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.33MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: bwg2.gushidawang.cc, port: 57539, type: vmess, uuid: fcf7202c-bd1a-44e9-a25e-bf152f6e5c11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-304.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.95MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-8.98MB/s(Youtube:不良林), server: 3.39.227.119, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇯🇵 日本-18.74MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
+  - {name: 🇨🇳 中国-237.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-10.06MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11263, type: vmess, uuid: 98672ce2-03ff-4309-94b6-65a6c04d8f25, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.78MB/s(Youtube:不良林), server: lakshan-singapore.duckdns.org, port: 54617, type: vmess, uuid: 82d8b43a-5a15-44b1-9977-ada4aa03cd62, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lakshan-singapore.duckdns.org}}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: agem.xiaohouzi.club, port: 10051, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: agem.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: us.vless.fun, port: 443, type: trojan, password: password, sni: us.vless.fun, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
