--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-8.98MB/s(Youtube:不良林), server: 3.39.227.119, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-18.74MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
-  - {name: 🇨🇳 中国-237.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇦 加拿大-3.73MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇨🇳 台湾-2.28MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-195.5KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇺🇸 美国-10.06MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11263, type: vmess, uuid: 98672ce2-03ff-4309-94b6-65a6c04d8f25, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.78MB/s(Youtube:不良林), server: lakshan-singapore.duckdns.org, port: 54617, type: vmess, uuid: 82d8b43a-5a15-44b1-9977-ada4aa03cd62, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lakshan-singapore.duckdns.org}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -66,17 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -87,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -103,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
@@ -128,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-195.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.78MB/s(Youtube:不良林)
